# gcp-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yaml  pyproject.toml
hello_world/: main.py
terraform/: main.tf  outputs.tf  variables.tf
