[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "helloing world"
authors = ["ersan <ersan.ustundag@pm.me>"]
packages = [{ include = "hello_world" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"

[tool.poetry.scripts]
main = "hello_world.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"